Fix wrapping of breadcrumb on small viewports

--- a/src/components/Breadcrumbs/index.css
+++ b/src/components/Breadcrumbs/index.css
@@ -1,5 +1,6 @@
 .Breadcrumbs-items {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .Breadcrumbs-item {
